<resources>
    <string name="app_name">Fennel</string>
    <string name="loading">Loading...</string>
    <string name="first_name">FIRST NAME</string>
    <string name="second_name">SECOND NAME</string>
    <string name="surname">SURNAME</string>
    <string name="id_number">ID NUMBER</string>
    <string name="gender">GENDER</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="leader">LEADER?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="farmer_home">FARMER HOME</string>
    <string name="mobile_number">MOBILE NUMBER</string>
    <string name="create">CREATE</string>
    <string name="required_documents">REQUIRED DOCUMENTS</string>
    <string name="farmer_photo">Farmer Photo</string>
    <string name="national_id_photo">National ID Photo</string>
    <string name="submit_for_approval">SUBMIT FOR APPROVAL</string>
    <string name="enroll_farmer">ENROLL FARMER</string>
    <string name="about_me">ABOUT ME</string>
    <string name="managing_field_manager">MANAGING FIELD MANAGER</string>
    <string name="managing_field_officer">MANAGING FIELD OFFICER</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="sync_data">SYNC DATA</string>
    <string name="save">SAVE</string>
    <string name="my_sign_ups">MY SIGN UPS</string>
    <string name="my_farmers">MY FARMERS</string>
    <string name="my_logbook">MY LOGBOOK</string>
    <string name="my_dashboard">MY DASHBOARD</string>
    <string name="farmer_status">FARMER ACTIVITY</string>
    <string name="visit_log">VISIT LOG</string>
    <string name="employee_id_number">Employee ID Number</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="cancel_txt">Cancel</string>
    <string name="done_txt">DONE</string>
    <string name="back_txt">Back</string>
    <string name="team">TEAM</string>
    <string name="person">PERSON</string>

    <string-array name="optionsLocation">
        <item>LOCATION 1</item>
        <item>LOCATION 2</item>
        <item>LOCATION 3</item>
    </string-array>

    <string-array name="optionsSubLocation">
        <item>SUB LOCATION 1</item>
        <item>SUB LOCATION 2</item>
        <item>SUB LOCATION 3</item>
    </string-array>

    <string-array name="optionsVillage">
        <item>VILLAGE 1</item>
        <item>VILLAGE 2</item>
        <item>VILLAGE 3</item>
    </string-array>

    <string-array name="optionsTree">
        <item>TREE SPECIES 1</item>
        <item>TREE SPECIES 2</item>
        <item>TREE SPECIES 3</item>
    </string-array>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="str_user_pass_missing"><![CDATA[Please put username & password]]></string>
    <string name="auth_username_test_env">waajay@westagilelabs.com.waldev</string>
    <string name="auth_username_test_prod">waajay@westagilelabs.com</string>
    <string name="auth_password">walshamba123</string>
    <string name="str_error_code_message">"Error code: "</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_is_complete">TASK IS COMPLETE</string>
</resources>
