<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fennel="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">


    <!--<ImageView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:scaleType="centerCrop"-->
    <!--android:src="@drawable/login_bg" />-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/padding_80"
        android:layout_marginLeft="@dimen/padding_30"
        android:layout_marginRight="@dimen/padding_30"
        android:background="@color/white"
        android:isScrollContainer="true">

        <ImageView
            android:id="@+id/imgID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/etID"
            android:layout_alignTop="@+id/etID"
            android:padding="@dimen/padding_15"
            android:src="@drawable/ic_username" />

        <EditText
            android:id="@+id/etID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/imgID"
            android:background="@null"
            android:hint="@string/employee_id_number"
            android:padding="@dimen/padding_15" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/etID"
            android:background="@color/grey_light" />

        <ImageView

            android:id="@+id/imgPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/etPassword"
            android:layout_alignTop="@+id/etPassword"
            android:padding="@dimen/padding_15"
            android:src="@drawable/ic_password" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider"
            android:layout_toRightOf="@+id/imgID"
            android:background="@null"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/padding_15" />

        <tintash.fennel.views.FontTextView
            android:id="@+id/txtLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPassword"
            android:background="@drawable/selector_green_button"
            android:gravity="center"
            android:padding="@dimen/padding_15"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            fennel:fontName="Avenir-Heavy.ttf" />
    </RelativeLayout>

</RelativeLayout>